# photo-wall

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/composables/: useLayout.ts  usePhotoWall.ts
src/styles/: main.css
src/types/: index.ts
